[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Player2.gd" type="Script" id=2]
[ext_resource path="res://actors/ai.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 313.691

[node name="Player2" instance=ExtResource( 1 )]
collision_mask = 3
script = ExtResource( 2 )
current_controller = 0

[node name="Area2D" type="Area2D" parent="." index="2"]
collision_mask = 2

[node name="ball_detector" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="ai" type="Node2D" parent="." index="3"]
script = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="ai" method="_on_Area2D_body_entered"]
[connection signal="ball_located" from="ai" to="." method="_on_ai_ball_located"]
